# empirical-incubation

./: .gitignore  README.md  pyproject.toml  requirements.txt
manifests/: memetracker.txt
slurm/: _template_reference.slurm  analyze.slurm  download.slurm
src/empirical_incubation/: __init__.py  cli.py  detect.py  download.py  parse.py  pipeline.py  plot.py  report.py  synth.py
src/empirical_incubation/stages/: aggregate.py  clean.py  report.py  score.py
tests/: test_cli.py  test_detect.py  test_download.py  test_parse.py  test_pipeline.py  test_plot.py  test_report.py  test_synth.py
tests/stages/: test_aggregate.py  test_clean.py  test_report.py  test_score.py
